package main;

import pattern.*;

public class Main {
    public static void main(String[] args) {
    new Repository(new PostgresDriverFactory()).findOrders();
}
}
