package pattern;

public interface DatabaseCommand {
    String execute(String sql);
}
