package pattern;

public interface DatabaseConnection {
    String open();
}
