package pattern;

public class MySqlConnection implements DatabaseConnection {
    public String open() { return "Conexion MySQL abierta"; }
}
