package pattern;

public class PostgresConnection implements DatabaseConnection {
    public String open() { return "Conexion PostgreSQL abierta"; }
}
