@startuml
title Abstract Factory - Ejemplo 2 - solucion para conectores de bases de datos
skinparam classAttributeIconSize 0
hide empty fields
class "main.Main" as main_Main {
  +main(String[] args): void
}
interface "pattern.DatabaseCommand" as pattern_DatabaseCommand {
}
interface "pattern.DatabaseConnection" as pattern_DatabaseConnection {
}
interface "pattern.DatabaseDriverFactory" as pattern_DatabaseDriverFactory {
}
class "pattern.MySqlCommand" as pattern_MySqlCommand {
  +execute(String sql): String
}
class "pattern.MySqlConnection" as pattern_MySqlConnection {
  +open(): String
}
class "pattern.MySqlDriverFactory" as pattern_MySqlDriverFactory {
  +createConnection(): DatabaseConnection
  +createCommand(): DatabaseCommand
}
class "pattern.PostgresCommand" as pattern_PostgresCommand {
  +execute(String sql): String
}
class "pattern.PostgresConnection" as pattern_PostgresConnection {
  +open(): String
}
class "pattern.PostgresDriverFactory" as pattern_PostgresDriverFactory {
  +createConnection(): DatabaseConnection
  +createCommand(): DatabaseCommand
}
class "pattern.Repository" as pattern_Repository {
  +Repository(DatabaseDriverFactory factory)
  +findOrders(): void
}
pattern_DatabaseCommand <|.. pattern_MySqlCommand
pattern_DatabaseConnection <|.. pattern_MySqlConnection
pattern_DatabaseDriverFactory <|.. pattern_MySqlDriverFactory
pattern_DatabaseCommand <|.. pattern_PostgresCommand
pattern_DatabaseConnection <|.. pattern_PostgresConnection
pattern_DatabaseDriverFactory <|.. pattern_PostgresDriverFactory
main_Main ..> pattern_PostgresDriverFactory : instancia
main_Main ..> pattern_Repository : instancia
pattern_DatabaseDriverFactory --> pattern_DatabaseCommand : usa
pattern_DatabaseDriverFactory --> pattern_DatabaseConnection : usa
pattern_MySqlCommand --> pattern_DatabaseCommand : usa
pattern_MySqlConnection --> pattern_DatabaseConnection : usa
pattern_MySqlDriverFactory --> pattern_DatabaseCommand : usa
pattern_MySqlDriverFactory --> pattern_DatabaseConnection : usa
pattern_MySqlDriverFactory --> pattern_DatabaseDriverFactory : usa
pattern_MySqlDriverFactory ..> pattern_MySqlCommand : instancia
pattern_MySqlDriverFactory ..> pattern_MySqlConnection : instancia
pattern_PostgresCommand --> pattern_DatabaseCommand : usa
pattern_PostgresConnection --> pattern_DatabaseConnection : usa
pattern_PostgresDriverFactory --> pattern_DatabaseCommand : usa
pattern_PostgresDriverFactory --> pattern_DatabaseConnection : usa
pattern_PostgresDriverFactory --> pattern_DatabaseDriverFactory : usa
pattern_PostgresDriverFactory ..> pattern_PostgresCommand : instancia
pattern_PostgresDriverFactory ..> pattern_PostgresConnection : instancia
pattern_Repository --> pattern_DatabaseCommand : usa
pattern_Repository --> pattern_DatabaseConnection : usa
pattern_Repository --> pattern_DatabaseDriverFactory : usa
@enduml
